[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"bridges/modules/xcm-bridge-hub-router",
	"bridges/primitives/chain-asset-hub-kusama",
	"bridges/primitives/chain-asset-hub-polkadot",
	"bridges/primitives/chain-bridge-hub-cumulus",
	"bridges/primitives/chain-bridge-hub-kusama",
	"bridges/primitives/chain-bridge-hub-polkadot",
	"bridges/primitives/chain-bridge-hub-rococo",
	"bridges/primitives/chain-bridge-hub-wococo",
	"bridges/primitives/chain-kusama",
	"bridges/primitives/chain-polkadot",
	"bridges/primitives/chain-rococo",
	"bridges/primitives/chain-wococo",
	"bridges/primitives/header-chain",
	"bridges/primitives/messages",
	"bridges/primitives/parachains",
	"bridges/primitives/polkadot-core",
	"bridges/primitives/relayers",
	"bridges/primitives/runtime",
	"bridges/primitives/test-utils",
	"bridges/primitives/xcm-bridge-hub-router",
	"client/cli",
	"client/collator",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/proposer",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-interface",
	"client/relay-chain-minimal-node",
	"client/relay-chain-rpc-interface",
	"client/service",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/pallets/template",
	"parachain-template/runtime",
	"parachains/common",
	"parachains/integration-tests/emulated/assets/asset-hub-kusama",
	"parachains/integration-tests/emulated/assets/asset-hub-polkadot",
	"parachains/integration-tests/emulated/assets/asset-hub-westend",
	"parachains/integration-tests/emulated/bridges/bridge-hub-rococo",
	"parachains/integration-tests/emulated/collectives/collectives-polkadot",
	"parachains/integration-tests/emulated/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/assets/asset-hub-kusama",
	"parachains/runtimes/assets/asset-hub-polkadot",
	"parachains/runtimes/assets/asset-hub-westend",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/test-utils",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/test-utils",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/glutton/glutton-kusama",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/test-utils",
	"parachains/runtimes/testing/penpal",
	"parachains/runtimes/testing/rococo-parachain",
	"polkadot-parachain",
	"primitives/aura",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
	"xcm/xcm-emulator",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
binary-merkle-tree = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
extrinsic-shuffler = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
fork-tree = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-election-provider-solution-type = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-election-provider-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-remote-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-procedural = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-system-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mangata-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mangata-types = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mmr-gadget = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mmr-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-alliance = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-asset-tx-payment = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-assets = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-bags-list = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-child-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-collective = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-contracts = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-contracts-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-contracts-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-conviction-voting = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-democracy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-fast-unstake = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-identity = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-im-online = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-indices = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-membership = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-multisig = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nfts = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nfts-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nis = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nomination-pools = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-offences = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-offences-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-preimage = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-proxy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-ranked-collective = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-recovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-referenda = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-scheduler = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-session = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-session-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-society = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking-reward-fn = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-state-trie-migration = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-sudo = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-tips = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-treasury = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-uniques = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-vesting = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-whitelist = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-allocator = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-basic-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-client-db = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-beefy-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-grandpa-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor-common = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-informant = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-bitswap = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-common = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-gossip = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-light = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-sync = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-transactions = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc-server = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc-spec-v2 = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-state-db = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-storage-monitor = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-sysinfo = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-application-crypto = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-core-hashing = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-core-hashing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-database = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-debug-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-metadata-ir = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-mmr-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-npos-elections = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-panic-handler = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-runtime-interface = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-session = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-staking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-state-machine = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-ver = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-version = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-wasm-interface = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-weights = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-rpc-client = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-state-trie-migration-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-test-client = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-test-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-test-utils-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
try-runtime-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
ver-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }

[patch."https://github.com/paritytech/polkadot"]
kusama-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
pallet-xcm = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
pallet-xcm-benchmarks = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-approval-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-availability-bitfield-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-availability-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-availability-recovery = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-cli = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-collator-protocol = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-core-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-dispute-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-erasure-coding = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-gossip-support = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-network-bridge = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-collation-generation = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-approval-voting = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-av-store = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-backing = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-bitfield-signing = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-candidate-validation = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-chain-api = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-chain-selection = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-dispute-coordinator = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-parachains-inherent = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-provisioner = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-pvf = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-pvf-checker = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-core-runtime-api = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-jaeger = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-metrics = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-network-protocol = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-subsystem = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-subsystem-types = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-node-subsystem-util = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-overseer = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-parachain = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-rpc = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-runtime = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-runtime-common = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-runtime-metrics = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-runtime-parachains = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-service = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-statement-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-statement-table = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-test-client = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-test-runtime = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
polkadot-test-service = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
rococo-runtime = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
rococo-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
slot-range-helper = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
test-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
tracing-gum = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
tracing-gum-proc-macro = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
westend-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
xcm = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
xcm-builder = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
xcm-executor = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }
xcm-procedural = { git = "https://github.com/mangata-finance/polkadot", branch = "develop" }

[patch."https://github.com/w3f/ring-proof"]
ring = { git = "https:///github.com//w3f/ring-proof", rev="0e948f3c" }
