[package]
name = "cumulus-client-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"

# Substrate dependencies
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
