[package]
name = "parachains-common"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External dependencies
codec = { package = 'parity-scale-codec', version = '2.3.0', features = ['derive'], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-consensus-aura = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
sp-std = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
sp-io = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
frame-executive = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
frame-support = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
frame-system = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
pallet-assets = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
pallet-authorship = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
pallet-balances = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
sp-runtime = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
sp-core = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }

# Polkadot dependencies
polkadot-runtime-common = { git = 'https://github.com/mangata-finance/polkadot', default-features = false , branch = "mangata-dev-v4" }
polkadot-primitives = { git = 'https://github.com/mangata-finance/polkadot', default-features = false , branch = "mangata-dev-v4" }
xcm = { git = 'https://github.com/mangata-finance/polkadot', default-features = false , branch = "mangata-dev-v4" }
xcm-executor = { git = 'https://github.com/mangata-finance/polkadot', default-features = false , branch = "mangata-dev-v4" }

# Local dependencies
pallet-asset-tx-payment = { path = '../../pallets/asset-tx-payment', default-features = false }
pallet-collator-selection = { path = '../../pallets/collator-selection', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }
pallet-authorship = { git = 'https://github.com/mangata-finance/substrate', default-features = false , branch = "mangata-dev-v4" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/mangata-finance/substrate', branch = "mangata-dev-v4" }

[features]
default = ["std"]
std = [
	'codec/std',
	'scale-info/std',
	'sp-consensus-aura/std',
	'sp-std/std',
	'sp-io/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-asset-tx-payment/std',
	'pallet-collator-selection/std',
	'pallet-assets/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'polkadot-runtime-common/std',
	'polkadot-primitives/std',
]
