[package]
name = "cumulus-primitives-core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v4" }
sp-api = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v4" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v4" }
frame-support = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v4" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/mangata-finance/polkadot", default-features = false, branch = "mangata-dev-v4" }
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot", default-features = false, branch = "mangata-dev-v4" }
polkadot-core-primitives = { git = "https://github.com/mangata-finance/polkadot", default-features = false, branch = "mangata-dev-v4" }

# Other dependencies
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"polkadot-primitives/std",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"sp-api/std",
	"frame-support/std",
]
