[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-executor-common = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
substrate-test-client = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

# Cumulus deps
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-service = { path = "../service" }
cumulus-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v4" }
polkadot-parachain = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v4" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }
