[package]
name = "cumulus-client-consensus-aura"
description = "AURA consensus algorithm for parachains"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-application-crypto = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

# Polkadot dependencies
polkadot-client = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v4" }

# Cumulus dependencies
cumulus-client-consensus-common = { path = "../common" }
cumulus-primitives-core = { path = "../../../primitives/core" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
tracing = "0.1.22"
async-trait = "0.1.42"
